# diary-workout-tracker-backend

./: .gitignore  .pre-commit-config.yaml  1.sh  Makefile  README.md  docker-compose-minio.yaml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  apps.py  urls.py  views.py
backend/api/v1/: constants.py  exceptions.py  fields.py  serializers.py  tasks.py  throttling.py  urls.py  validators.py  views.py
backend/config/: asgi.py  celery.py  logs.py  settings.py  storage.py  urls.py  wsgi.py
backend/core/: apps.py
backend/core/management/commands/: test_training.py
backend/core/templatetags/: utils.py
backend/fixture/: achievements_fixture.json
backend/runing/: apps.py  models.py
backend/runing/migrations/: 0001_initial.py
backend/running/: admin.py  apps.py  fields.py  forms.py  models.py  widgets.py
backend/running/management/commands/: test_phrase.py  (+1 more)
backend/running/migrations/: 0001_initial.py  0002_history_user_id_alter_achievement_reward_points.py  0003_delete_recreationphrase_and_more.py  0004_add_data_motivationalphrase.py  0005_alter_history_options_remove_history_training_date_and_more.py  0006_alter_history_image_alter_history_route.py  0007_alter_day_options_alter_history_options_and_more.py  0008_add_workout_data.py  0009_achievement_black_white_icon_alter_achievement_icon.py  0010_remove_achievement_stars_alter_achievement_id.py  0011_remove_achievement_black_white_icon_and_more.py  0012_achievement_recurring.py
backend/templates/admin/: base.html
backend/templates/email/: new-email.html
backend/users/: admin.py  apps.py  constants.py  managers.py  models.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_password.py  0002_alter_user_name.py  0002_user_amount_of_skips_and_more.py  0003_alter_user_options_alter_user_amount_of_skips_and_more.py  0003_alter_user_options_user_image_and_more.py  0003_user_gender_user_height_cm_user_weight_kg_and_more.py  0004_alter_user_height_cm_alter_user_weight_kg.py  0004_merge_20240308_2237.py  0005_alter_user_gender.py  0005_alter_user_gender_alter_user_name.py  0006_alter_user_avatar.py  0007_remove_user_last_completed_training_number_and_more.py  0008_user_total_m_run.py  0009_user_timezone.py  0010_alter_user_total_m_run.py  0011_user_blocked_training.py
backend/utils/: achievement.py  achievements.py  amount_skips.py  authcode.py  constants.py  mailsender.py  motivation_phrase.py  users.py  utils.py
docs/: schema.yml
infra/: .env.example  nginx.conf
logs/: django.log.2024-04-03
minio/.minio.sys/: format.json
test/: conftest.py  pytest.ini  test_temp.py
test/api_tests/: achievment_tests.py  authcode_tests.py  history_tests.py  me_tests.py  resend_code_tests.py  smoke_tests.py  throttling_tests.py  token_generation_tests.py  user_tests.py
test/utils_tests/: achievements_test.py  achievements_tests.py  achievment_tests.py  authcode_tests.py  motivation_phrase_tests.py  utils_tests.py
(+3 files in other folders)
